--- a/app/views/calendar/show_a_month.html.erb
+++ b/app/views/calendar/show_a_month.html.erb
@@ -22,7 +22,7 @@
     </li>
     <li>
       > <%= smart_return_user_view_menu_item(@user) if @user%>
-      <%= link_to "返回队伍首页", team_view_path(@team) if @team%>
+      <%= link_to "返回球队首页", team_view_path(@team) if @team%>
     </li>
   </ul>
 </div>
