--- a/app/views/match_invitations/_sidebar_menu.html.erb
+++ b/app/views/match_invitations/_sidebar_menu.html.erb
@@ -8,6 +8,6 @@
   <li class='seperate'>
   </li>
   <li>
-    > <%= link_to "返回队伍首页", team_view_path(@team) %>
+    > <%= link_to "返回球队首页", team_view_path(@team) %>
   </li>
 </ul>
