--- a/app/views/shared/_activity.html.erb
+++ b/app/views/shared/_activity.html.erb
@@ -7,31 +7,83 @@
 <%end%>
 
 <%if activity.class == Training%>
-<div class="activity training_activity <%= 'training_activity_narrow' if !(display_status) %>">
+<div class="activity training_activity">
   <div class="content">
     <%= link_to activity.team.shortname, team_view_path(activity.team.id) %>训练
     <br/><br/>
     <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>,
     <%= location_link activity.location, activity.football_ground_id %>
     <br/><br/>
-    <%= time_status_text activity%>
-    <%= link_to('详情', training_path(activity)) if !(params[:controller] == "trainings" && params[:action] == "show")%>
-    <br/><br/>
     <%links = []%>
     <%if display_status%>
-      <%= join_status_text activity%>&nbsp;&nbsp;&nbsp;
+      <%= time_status_text activity%>, <%= join_status_text activity%>&nbsp;&nbsp;&nbsp;
       <% links_text = join_status_links activity%>
       <% links << link_to(links_text[0], training_training_joins_path(activity), :method=>'post') if activity.can_be_joined_by?(current_user)%>
       <% links << link_to(links_text[1], training_training_join_path(activity, 0), :method=>'delete') if activity.can_be_quited_by?(current_user)%>
-      <%= links_with_sticks links%>
+    <%else%>
+      <%= time_status_text activity%>&nbsp;&nbsp;&nbsp;
     <%end%>
+    <%links << link_to('详情', training_path(activity))%>
+    <%= links_with_sticks links%>
   </div>
   <div class="activity_icon">
     <%= team_image_link activity.team %>
   </div>
 </div>
+<%elsif activity.class == SidedMatch%>
+<div class="activity match_activity">
+  <div class="content">
+    <%= link_to(activity.host_team.shortname, team_view_path(activity.host_team_id))%>
+    对阵
+    <%= activity.guest_team_name%>
+    <br/><br/>
+    <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>,
+    <%= location_link activity.location, activity.football_ground_id%>
+    <br/><br/>
+    <%links = []%>
+    <%if display_status%>
+      <%= time_status_text activity%>, <%= join_status_text activity%>&nbsp;&nbsp;&nbsp;
+      <% links_text = join_status_links activity%>
+      <% links << link_to(links_text[0], sided_match_sided_match_joins_path(activity), :method=>'post') if activity.can_be_joined_by?(current_user)%>
+      <% links << link_to(links_text[1], sided_match_sided_match_join_path(activity, 0), :method=>'delete') if activity.can_be_quited_by?(current_user)%>
+    <%else%>
+      <%= time_status_text activity%>&nbsp;&nbsp;&nbsp;
+    <%end%>
+    <%links << link_to('详情', sided_match_path(activity))%>
+    <%= links_with_sticks links%>
+  </div>
+  <div class="activity_icon">
+    <%= small_team_image_link activity.host_team, :class=>"host_icon" %>
+    <div class="vs" title="V.S."></div>
+    <%= image_tag('default_user_small.gif', :title=>activity.guest_team_name, :class=>"guest_icon") %>
+  </div>
+</div>
+<%elsif activity.class == Play%>
+<div class="activity play_activity">
+  <div class="content">
+    <%= smart_nickname @user if @user%>去<%= link_to_if !activity.football_ground_id.nil?, h(activity.location), football_ground_path(activity.football_ground_id)%>随便踢踢
+    <br/><br/>
+    <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>
+    <br/><br/>
+    <%links = []%>
+    <%if display_status%>
+      <%= time_status_text activity%>, <%= join_status_text activity%>&nbsp;&nbsp;&nbsp;
+      <% links_text = join_status_links activity%>
+      <% links << link_to(links_text[0], play_play_joins_path(activity), :method=>'post') if activity.can_be_joined_by?(current_user)%>
+      <% links << link_to(links_text[1], play_play_join_path(activity, 0), :method=>'delete') if activity.can_be_quited_by?(current_user)%>
+    <%else%>
+      <%= time_status_text activity%>&nbsp;&nbsp;&nbsp;
+    <%end%>
+    <%links << link_to('详情', play_path(activity))%>
+    <%= links_with_sticks links%>
+  </div>
+  <div class="activity_icon">
+    <%= @user ? user_image_link(@user) : image_tag('default_user.gif', :title=>"") %>
+  </div>
+</div>
 <%elsif activity.class == Match %>
-<div class="activity match_activity <%= 'match_activity_narrow' if !(display_status) %>">
+<%belongs_to_both_teams = display_status && current_user.is_team_member_of?(activity.host_team_id) && current_user.is_team_member_of?(activity.guest_team_id)%>
+<div class="activity match_activity <%= 'match_activity_wide' if belongs_to_both_teams%>">
   <div class="content">
     <%= link_to(activity.host_team.shortname, team_view_path(activity.host_team_id))%>
     对阵
@@ -40,12 +92,31 @@
     <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>,
     <%= location_link activity.location, activity.football_ground_id%>
     <br/><br/>
-    <%= time_status_text activity%>
-    <%= link_to('详情', match_path(activity)) if !(params[:controller] == "matches" && params[:action] == "show")%>
-    <br/><br/>
-  </div>
-  <div class="content" style="width: 400px">
-    <%if display_status%>
+    <%if !belongs_to_both_teams%>
+      <%links = []%>
+      <%if display_status%>
+        <%if current_user.is_team_member_of?(activity.host_team)%>
+          <%team = activity.host_team%>
+        <%else%>
+          <%team = activity.guest_team%>
+        <%end%>
+        <%= time_status_text activity%>, <%= join_status_text activity, team%>&nbsp;&nbsp;&nbsp;
+        <% links_text = match_join_status_links activity, team%>
+        <%links << link_to(links_text[0], 
+          match_joins_path(:team_id => team, :match_id => activity), :method=>:post) if activity.can_be_joined_by?(current_user, team)%>
+        <%links << link_to(links_text[1], 
+          match_join_path(0, :team_id => team, :match_id => activity), :method=>:delete) if activity.can_be_quited_by?(current_user, team)%>
+      <%else%>
+        <%= time_status_text activity%>&nbsp;&nbsp;&nbsp;
+      <%end%>
+      <%links << link_to('详情', match_path(activity))%>
+      <%= links_with_sticks links%>
+    <%else%>
+      <%= time_status_text activity%>
+      <%= link_to('详情', match_path(activity))%>
+      <br/><br/>
+    </div>
+    <div class="content" style="width: 400px">
       <%if current_user.is_team_member_of?(activity.host_team_id)%>
         <%links = []%>
         <%team = activity.host_team%>
@@ -75,57 +146,6 @@
     <%= small_team_image_link activity.host_team, :class=>"host_icon" %>
     <div class="vs" title="V.S."></div>
     <%= small_team_image_link(activity.guest_team, :class=>"guest_icon") %>
-  </div>
-</div>
-<%elsif activity.class == SidedMatch%>
-<div class="activity match_activity <%= 'match_activity_narrow' if !(display_status) %>">
-  <div class="content">
-    <%= link_to(activity.host_team.shortname, team_view_path(activity.host_team_id))%>
-    对阵
-    <%= activity.guest_team_name%>
-    <br/><br/>
-    <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>,
-    <%= location_link activity.location, activity.football_ground_id%>
-    <br/><br/>
-    <%= time_status_text activity%>
-    <%= link_to('详情', sided_match_path(activity)) if !(params[:controller] == "sided_matches" && params[:action] == "show")%>
-    <br/><br/>
-    <%links = []%>
-    <%if display_status%>
-      <%= join_status_text activity%>&nbsp;&nbsp;&nbsp;
-      <% links_text = join_status_links activity%>
-      <% links << link_to(links_text[0], sided_match_sided_match_joins_path(activity), :method=>'post') if activity.can_be_joined_by?(current_user)%>
-      <% links << link_to(links_text[1], sided_match_sided_match_join_path(activity, 0), :method=>'delete') if activity.can_be_quited_by?(current_user)%>
-      <%= links_with_sticks links%>
-    <%end%>
-  </div>
-  <div class="activity_icon">
-    <%= small_team_image_link activity.host_team, :class=>"host_icon" %>
-    <div class="vs" title="V.S."></div>
-    <%= image_tag('default_user_small.gif', :title=>activity.guest_team_name, :class=>"guest_icon") %>
-  </div>
-</div>
-<%elsif activity.class == Play%>
-<div class="activity play_activity <%= 'play_activity_narrow' if !(display_status) %>">
-  <div class="content">
-    <%= smart_nickname @user if @user%>去<%= link_to_if !activity.football_ground_id.nil?, h(activity.location), football_ground_path(activity.football_ground_id)%>随便踢踢
-    <br/><br/>
-    <%= activity.start_time.strftime('%H:%M')%>-<%= activity.end_time.strftime('%H:%M')%>
-    <br/><br/>
-    <%= time_status_text activity%>
-    <%= link_to('详情', play_path(activity)) if !(params[:controller] == "plays" && params[:action] == "show")%>
-    <br/><br/>
-    <%links = []%>
-    <%if display_status%>
-      <%= join_status_text activity%>&nbsp;&nbsp;&nbsp;
-      <% links_text = join_status_links activity%>
-      <% links << link_to(links_text[0], play_play_joins_path(activity), :method=>'post') if activity.can_be_joined_by?(current_user)%>
-      <% links << link_to(links_text[1], play_play_join_path(activity, 0), :method=>'delete') if activity.can_be_quited_by?(current_user)%>
-      <%= links_with_sticks links%>
-    <%end%>
-  </div>
-  <div class="activity_icon">
-    <%= @user ? user_image_link(@user) : image_tag('default_user.gif', :title=>"") %>
   </div>
 </div>
 <%end%>
