--- a/app/views/team_join_invitations/new_by_team_id.html.erb
+++ b/app/views/team_join_invitations/new_by_team_id.html.erb
@@ -25,7 +25,7 @@
   <h2></h2>
   <ul class="sidebar_menu">
     <li>
-      > <%= link_to "返回队伍首页", user_view_path(@team) %>
+      > <%= link_to "返回球队首页", user_view_path(@team) %>
     </li>
   </ul>
 </div>
