--- a/app/views/team_views/show.html.erb
+++ b/app/views/team_views/show.html.erb
@@ -55,8 +55,8 @@
         </span>
       <%end%>
 
-      <span class="tab_link" style="margin-left: 10px;">队伍信息</span>
-      <span class="tab_link">队伍阵型</span>
+      <span class="tab_link" style="margin-left: 10px;">球队信息</span>
+      <span class="tab_link">球队阵型</span>
       <% f_text = formation_text @formation_array%>
       <div class="tab">
       <%= "<span>球队全名: #{h @team.name}</span><br/>" unless @team.name.blank?%>
