--- a/app/views/users/invite.html.erb
+++ b/app/views/users/invite.html.erb
@@ -19,4 +19,9 @@
   <% end -%>
 </div>
 
+<div id="narrow_right_content" class="sect">
+  <h2></h2>
+  <%=render :partial=>'sidebar_menus/user_view_friend'%>
+</div>
+  
 <div class="clearBoth"></div>
