--- a/app/views/layouts/_header_setting.html.erb
+++ b/app/views/layouts/_header_setting.html.erb
@@ -13,7 +13,7 @@
         <%= link_to("设置", edit_user_path(current_user))%>
       </div>
     </span>
-    <%= link_to "踢球去", new_play_path %>&nbsp;&nbsp;| &nbsp;&nbsp;
+    <%= link_to "随便踢踢", new_play_path %>&nbsp;&nbsp;| &nbsp;&nbsp;
     <%= link_to "退出", session_path(0), :method=>:delete %>
   <%else%>
     <%= link_to "登录", new_session_path %>&nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;
