--- a/app/views/sided_matches/show.html.erb
+++ b/app/views/sided_matches/show.html.erb
@@ -9,23 +9,36 @@
     <h2>比赛基本信息</h2>
     <div class="activities">
         <%=date_div_link @match.start_time, @match.host_team%>
-        <div style="float:left">
+        <div class="detail">
           <span>对阵球队: </span><%= @match.guest_team_name%><br />
+          <%if @match.is_after_match?%>
+            <span>比赛结果: </span><%=sided_match_result_text @match%><br />
+          <%end%>
           <span>时间: </span><%= @match.start_time.strftime("%H:%M")%>-<%=@match.end_time.strftime("%H:%M")%><br />
           <span>时长: </span>上下半场各<%= @match.half_match_length%>分钟,中场休息<%= @match.rest_length%>分钟<br />
           <span>地点: </span><%= location_link @match.location, @match.football_ground_id %><br />
           <span>比赛类型: </span><%= match_type_text @match.match_type%><br />
           <span>人数: </span><%= @match.size%>人制<br />
-          <span>规则: </span><%= @match.has_judge ? '有' : '没有'%>裁判, <%= @match.has_card ? '有' : '没有'%>红黄牌, <%= @match.has_offside ? '有' : '没有'%>越位, 
-          平局后<%= win_rule_text @match.win_rule%>
+          <span>平局后: </span><%= win_rule_text @match.win_rule%><br/>
+          <span>其他规则: </span><%= @match.has_judge ? '有' : '没有'%>裁判, <%= @match.has_card ? '有' : '没有'%>红黄牌, <%= @match.has_offside ? '有' : '没有'%>越位<br/>
+          <%if logged_in? && current_user.is_team_member_of?(@match.team)%>
+            <br />
+            <span>我的状态: </span>
+            <%= join_status_text @match%>&nbsp;&nbsp;&nbsp;
+            <%links = []%>
+            <% links_text = join_status_links @match%>
+            <% links << link_to(links_text[0], sided_match_sided_match_joins_path(@match), :method=>'post') if @match.can_be_joined_by?(current_user)%>
+            <% links << link_to(links_text[1], sided_match_sided_match_join_path(@match, 0), :method=>'delete') if @match.can_be_quited_by?(current_user)%>
+            <%= links_with_sticks links%>
+          <%end%>
         </div>
         <div class="clearBoth"></div>
     </div>
     <%if logged_in?%>
-      <div style="float:left">
+      <div style="float:right">
         <%links = []%>
         <%if @match.can_be_edited_by?(current_user)%>
-          <%links << " #{link_to '修改比赛基本信息', edit_sided_match_path(@match)}"%>
+          <%links << " #{link_to '修改', edit_sided_match_path(@match)}"%>
         <%end%>
         <% if @match.can_be_edited_formation_by?(current_user) %>
           <%links << " #{link_to '编辑阵型', edit_formation_sided_match_joins_path(:match_id=>@match.id)}"%>
@@ -34,17 +47,7 @@
           <%links << " #{link_to '填写比赛结果', edit_result_sided_match_path(@match)}"%>
         <%end%>
         <% if @match.can_be_destroyed_by?(current_user) %>
-          <%links << " #{link_to '取消比赛', sided_match_path(@match), :method=>:delete}"%>
-        <%end%>
-        <%= links_with_sticks links%>
-      </div>     
-      <div style="float:right">
-        <%links = []%>
-        <% if @match.can_be_joined_by?(current_user) %>
-            <%links << link_to("我要参加", sided_match_joins_path(:match_id => @match), :method=>:post)%>     
-        <%end%>
-        <% if @match.can_be_quited_by?(current_user) %>        
-            <%links << link_to("我不参加了",sided_match_join_path(0, :match_id => @match), :method=>:delete)%>        
+          <%links << " #{link_to '取消', sided_match_path(@match), :method=>:delete}"%>
         <%end%>
         <%= links_with_sticks links%>
       </div>
@@ -100,7 +103,7 @@
     <%= render :partial=>'posts/narrow_post_list', :object=>@posts%>
     <div style="margin: 10px 0  0 10px;float:right;">
       <%links = []%>
-      <%links << "#{link_to '发言', new_sided_match_post_path(@match)}" if logged_in? && current_user.is_team_member_of?(@team)%>
+      <%links << "#{link_to '针对本场训练发言', new_sided_match_post_path(@match)}" if logged_in? && current_user.is_team_member_of?(@team)%>
       <%links << "#{link_to '更多', sided_match_posts_path(@match)}"%>
       <%= links_with_sticks links%>
     </div>
@@ -108,6 +111,7 @@
   </div>                  
 </div>
 
+<div class="clearBoth"></div>
 
 <%#*<div id="match_blackboard">%>
   <%#*！！各种状态！！%>
