--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -8,31 +8,30 @@
     <h2>训练基本信息</h2>
     <div class="activities">
       <%=date_div_link @training.start_time, @team%>
-      <div style="float:left">
+      <div class="detail">
         <span>时间: </span><%= @training.start_time.strftime("%H:%M")%>-<%=@training.end_time.strftime("%H:%M")%><br />
         <span>地点: </span><%= location_link @training.location, @training.football_ground_id %><br />
+        <%if logged_in? && current_user.is_team_member_of?(@training.team)%>
+          <br />
+          <span>我的状态: </span>
+          <%= join_status_text @training%>&nbsp;&nbsp;&nbsp;
+          <%links = []%>
+          <% links_text = join_status_links @training%>
+          <% links << link_to(links_text[0], training_training_joins_path(@training), :method=>'post') if @training.can_be_joined_by?(current_user)%>
+          <% links << link_to(links_text[1], training_training_join_path(@training, 0), :method=>'delete') if @training.can_be_quited_by?(current_user)%>
+          <%= links_with_sticks links%>
+        <%end%>
       </div>
-        <div class="clearBoth"></div>
       <div class="clearBoth"></div>
     </div>
     <%if logged_in?%> 
-      <div style="float:left">
-        <%links = []%>
-        <%if @training.can_be_modified_by?(current_user)%>
-          > <%links << "#{link_to '修改', edit_training_path(@training)}"%>
-        <%end%>
-        <% if @training.can_be_destroyed_by?(current_user) %>
-          > <%links << "#{link_to '取消', training_path(@training), :method=>'delete', :confirm=>'真的要取消这次训练吗？'}"%>
-        <%end%>
-        <%= links_with_sticks links%>
-      </div>
       <div style="float:right">
         <%links = []%>
-        <% if @training.can_be_joined_by?(current_user) %>
-          > <%links << "#{link_to '我要参加', training_training_joins_path(@training), :method=>:post}"%>     
+        <%if @training.can_be_modified_by?(current_user)%>
+          <%links << "#{link_to '修改', edit_training_path(@training)}"%>
         <%end%>
-        <% if @training.can_be_quited_by?(current_user) %>           
-          > <%links << "#{link_to "我不参加了",training_training_join_path(@training, 0), :method=>:delete}"%>        
+        <% if @training.can_be_destroyed_by?(current_user) %>
+          <%links << "#{link_to '取消', training_path(@training), :method=>'delete', :confirm=>'真的要取消这次训练吗？'}"%>
         <%end%>
         <%= links_with_sticks links%>
       </div>
@@ -52,8 +51,8 @@
     <%= render(:partial => 'posts/post_list', :object => @posts)%>
     <div style="margin: 5px 10px  0 10px;float:right">
       <%links = []%>
-      <%links << "> #{link_to '针对本次发言', new_training_post_path(@training)}" if logged_in? && current_user.is_team_member_of?(@training.team)%>
-      <%links << "> #{link_to '更多', training_posts_path(@training)}"%>
+      <%links << "#{link_to '针对本次训练发言', new_training_post_path(@training)}" if logged_in? && current_user.is_team_member_of?(@training.team)%>
+      <%links << "#{link_to '更多', training_posts_path(@training)}"%>
       <%= links_with_sticks links%>
     </div>
   </div>
