--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,9 +1,11 @@
 <div id="narrow_right_content" class="sect">
   <h2></h2>
   <ul class="sidebar_menu">
+    <%if logged_in?%>
     <li>
-      > <%= link_to "邀请朋友加入", '#' %>
+      > <%= link_to '邀请朋友加入WeFootball', invite_users_path %>
     </li>
+    <%end%>
   </ul>
 </div>
 
