--- a/public/stylesheets/match.css
+++ b/public/stylesheets/match.css
@@ -14,7 +14,7 @@
 #match_blackboard div.guest_result{
   width: 190px;
   height:100%;
-  border: 1px solid #333333;
+/*  border: 1px solid #333333;*/
   padding: 5px
 }
 
