--- a/app/views/match_invitations/select_host_team.html.erb
+++ b/app/views/match_invitations/select_host_team.html.erb
@@ -11,12 +11,12 @@
     <h2><%=h @title%></h2>
   <%if @host_teams.empty?%>
     <br/>
-    你暂时没有其他管理的球队，因此无法邀请<%=link_to h(@guest_team.shortname), team_view_path(@guest_team)%>进行比赛<br/><br/>
+    你暂时没有其他管理的球队, 因此无法邀请<%=link_to h(@guest_team.shortname), team_view_path(@guest_team)%>进行比赛<br/><br/>
     你可以在<%= link_to "这里", new_team_path(:back_uri=>new_match_invitation_path(:guest_team_id=>@guest_team.id))%>创建自己的球队
   <%else%>
     
     <div class="notification">
-       选定球队后，你会以该队管理员的身份向<%=link_to h(@guest_team.shortname), team_view_path(@guest_team)%>发出比赛邀请
+       选定球队后, 你会以该队管理员的身份向<%=link_to h(@guest_team.shortname), team_view_path(@guest_team)%>发出比赛邀请
     </div>
     <%for t in @host_teams%>
       <div class="icon">
