--- a/app/views/sidebar_menus/_team_view_training_users.html.erb
+++ b/app/views/sidebar_menus/_team_view_training_users.html.erb
@@ -3,7 +3,7 @@
     > <%= link_to("参加这次训练的人", joined_users_training_path(@training)) %>
   </li>
   <li <%= selected_class_sidebar_menu_item(:action=>'undetermined_users', :controller=>'trainings')%>>
-    > <%= link_to("尚未决定是否参加的人", undetermined_users_training_path(@training)) %>
+    > <%= link_to("没表态是否参加的人", undetermined_users_training_path(@training)) %>
   </li>
   <li class='seperate'>
   </li>
