--- a/app/views/sided_matches/show.html.erb
+++ b/app/views/sided_matches/show.html.erb
@@ -75,7 +75,7 @@
         
 <div id="narrow_right_content">
   <div class="sect">
-    <h2>参加本场比赛的人</h2>
+    <h2>参加这场比赛的人</h2>
     <%if @joined_users.length <= SidedMatchesController::JOINED_USER_LIST_LENGTH%>
         <%= user_icon(@joined_users)%>
     <%else%>
@@ -87,7 +87,7 @@
   </div>
          
   <div class="sect">
-    <h2>尚未决定是否参加的人</h2>
+    <h2>没表态是否参加的人</h2>
     <%if @undetermined_users.length <= SidedMatchesController::UNDETERMINED_USER_LIST_LENGTH%>
         <%= user_icon(@undetermined_users)%>
     <%else%>
