--- a/app/views/team_joins/formation_management.html.erb
+++ b/app/views/team_joins/formation_management.html.erb
@@ -22,7 +22,7 @@
 
 <div style="float:left;width:530px" class="sect">
   <h2><%=h @title%></h2>
-  <div class="notification">提示：将队员头像拖到球场上来安排阵型</div>
+  <div class="notification">提示: 将队员头像拖到球场上来安排阵型</div>
   <div class="tab_container">
     <% category = [['门将', [0]], ['后卫', (1..4)], ['中场', (5..9)], ['前锋', [13,10,11,12]]]%>
     <% category.each_with_index do |item, i|%>
