--- a/app/views/trainings/joined_users.html.erb
+++ b/app/views/trainings/joined_users.html.erb
@@ -1,5 +1,5 @@
 <div id="wide_left_content" class="sect">
-  <h2>参加<%=link_to @title, training_path(@training)%>的人</h2>
+  <h2><%=h @title%></h2>
   <%= user_icon(@joined_users)%>
 </div>
 
