--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -72,7 +72,7 @@
   </div>
          
   <div class="sect">
-    <h2>尚未决定是否参加的人</h2>
+    <h2>没表态是否参加的人</h2>
     <%if @undetermined_users.length <= TrainingsController::UNDETERMINED_USER_LIST_LENGTH%>
         <%= user_icon(@undetermined_users)%>
     <%else%>
