--- a/app/views/users/forgot_password.erb
+++ b/app/views/users/forgot_password.erb
@@ -3,7 +3,7 @@
   <%= error_messages_for :user %>
 
   <% form_for :user do |f| %>
-    <p><label for="login">你的邮箱</label><br/>
+    <p><label for="login">你的Email</label><br/>
     <%= f.text_field :login %></p>
 
     <p><%= submit_tag '发送密码重置邮件' %></p>
