--- a/app/views/users/reset_password.erb
+++ b/app/views/users/reset_password.erb
@@ -1,5 +1,5 @@
 <div id="wide_left_content" class="sect">
-  <h2>重设<%=h @user.login %>的密码：</h2>
+  <h2>重设<%=h @user.login %>的密码: </h2>
 
   <%= error_messages_for :user %>
   <% form_for :user do |f| %>
