--- a/app/views/matches/_result_form.html.erb
+++ b/app/views/matches/_result_form.html.erb
@@ -17,7 +17,7 @@ else
 end%>
 <div class="result_input">
   <div class="goal_input">
-    填写比分: &nbsp;&nbsp;> <a class="switch" href="javascript:void(0)">没有详细比分，填写赛况</a><br />
+    填写比分: &nbsp;&nbsp;> <a class="switch" href="javascript:void(0)">没有详细比分, 填写赛况</a><br />
     
     <div class="result_block">
       <div style="margin: 10px 0">
@@ -64,7 +64,7 @@ end%>
       </p>
       <%if !situation_by_another_team.nil?%>
         <p>
-          对方填写的赛况：<span class="another_result"><%=situation_text situation_by_another_team%></span>
+          对方填写的赛况: <span class="another_result"><%=situation_text situation_by_another_team%></span>
           > <a class="fill_result" id='situation-<%=situation_by_another_team%>' href="javascript:void(0)">认可对方填写的赛况</a>
         </p>
       <%end%>
