--- a/app/views/sided_matches/_result_form.html.erb
+++ b/app/views/sided_matches/_result_form.html.erb
@@ -6,7 +6,7 @@
 
 <div class="result_input">
   <div class="goal_input">
-    填写比分: &nbsp;&nbsp;> <a class="switch" href="javascript:void(0)">没有详细比分，填写赛况</a><br />
+    填写比分: &nbsp;&nbsp;> <a class="switch" href="javascript:void(0)">没有详细比分, 填写赛况</a><br />
     
     <div class="result_block">
       <div style="margin: 10px 0">
