--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -50,7 +50,7 @@
     <%= f.text_area :summary, :cols=>40, :rows=>15%></p>
 
     <p>
-      <%= f.submit "保存" %>
+      <%= f.submit "保存个人信息" %>
     </p>
   <% end %>
 
@@ -89,7 +89,7 @@
     </p>
 
     <p>
-      <%= f.submit "保存" %>
+      <%= f.submit "保存球员信息" %>
     </p>
   <% end %>
 
@@ -102,7 +102,7 @@
     </p>
 
     <p>
-      <%= f.submit "保存" %>
+      <%= f.submit "上传头像" %>
     </p>
   <% end %>
 
@@ -115,7 +115,7 @@
     <%= f.password_field :password_confirmation, :size=>30, :maxlength=>40 %></p>
 
     <p>
-      <%= f.submit "保存" %>
+      <%= f.submit "修改密码" %>
     </p>
   <% end %>
   </div>
