--- a/app/views/users/invite.html.erb
+++ b/app/views/users/invite.html.erb
@@ -9,7 +9,7 @@
 
   <% form_for @register_invitation, :url=>invite_users_path do |f| -%>
 
-  <p><label for="login">朋友的邮箱</label><br/>
+  <p><label for="login">朋友的Email</label><br/>
   <%= f.text_field :login %></p>
 
   <p><label for="message">留言(可选)</label><br/>
