--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,10 +3,10 @@
   <%= error_messages_for :user %>
   <% form_for :user, :url => users_path do |f| -%>
 
-  <p><label for="email">你的邮箱</label><br/>
+  <p><label for="email">你的Email</label><br/>
   <%= f.text_field :login, :size=>30, :maxlength=>40 %></p>
 
-  <p><label for="password">密码</label><br/>
+  <p><label for="password">设一下密码</label><br/>
   <%= f.password_field :password, :size=>30, :maxlength=>40 %></p>
 
   <p><label for="password_confirmation">确认密码</label><br/>
