--- a/app/views/sided_matches/_form.html.erb
+++ b/app/views/sided_matches/_form.html.erb
@@ -75,6 +75,6 @@
 </table>
 
 <p>
-  比赛说明<br />
+  比赛说明 <span class="optional">(可选)</span><br />
   <%= f.text_area :description, :cols => 40, :rows => 10 %>
 </p>
