--- a/app/views/trainings/_form.html.erb
+++ b/app/views/trainings/_form.html.erb
@@ -28,5 +28,5 @@
   </div>
 </div>
   
-<p><label for="summary">训练说明</label><br/>
+  <p><label for="summary">训练说明 <span class="optional">(可选)</span></label><br/>
 <%= f.text_area :summary %></p>
