--- a/app/views/match_invitations/new.html.erb
+++ b/app/views/match_invitations/new.html.erb
@@ -99,12 +99,12 @@
     </table>
 
     <p>
-      比赛说明<br />
+      比赛说明 <span class="optional">(可选)</span><br />
       <%= f.text_area :new_description, :cols => 40, :rows => 10 %>
     </p>
 
     <p>
-      给对方管理员的留言<br />
+      给对方管理员的留言 <span class="optional">(可选)</span><br />
       <%= f.text_area :host_team_message, :cols => 40, :rows => 3 %>
     </p>
 
